# RAGImplementation

./: .gitignore  README.md  pyproject.toml
data/aethelgard/: Aethelgard_Financial_2025.txt
data/sample/: rag_overview.md
src/rag_implementation/: __init__.py  __main__.py  api.py  ingest.py  llm.py  loader.py  main.py  models.py  pipeline.py  splitter.py  vector_store.py
tests/: test_api.py  test_pipeline.py
