[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-implementation"
version = "0.1.0"
description = "Python RAG pipeline implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.115",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
rag-implementation = "rag_implementation.main:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_implementation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
